--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/w-kuipers/strig-docs#readme",
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@vercel/analytics": "^1.3.1",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
