--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev -p 5000",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+	"postbuild": "next-sitemap"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "@svgr/webpack": "^8.1.0",
     "@vercel/analytics": "^1.3.1",
     "next": "^13.0.6",
+    "next-sitemap": "^4.2.3",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
